Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 
 <body>
-    Hello World
 
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates iste voluptatum saepe, eveniet excepturi
-        facere consectetur cum nemo veritatis laboriosam suscipit accusantium non sint perspiciatis assumenda officiis
-        ratione voluptate deserunt!</p>
+    <div>
+        <img src="images/umk.png">
+        <h2>Eggy Andika Wardani</h2>
+    </div>
 </body>
 
 </html>
