Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <div>
-        <img src="images/umk.png">
-        <h2>Eggy Andika Wardani</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/umk.png">
+        <h2 id="profile-name">Eggy Andika Wardani</h2>
     </div>
 </body>
 
