added new div as header container with id = header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 
+    <div id="header">Header</div>
     <div id="profile-container">
         <img id="profile-image" src="images/umk.png">
         <h2 id="profile-name">Eggy Andika Wardani</h2>
