added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <img id="profile-image" src="images/umk.png">
         <h2 id="profile-name">Eggy Andika Wardani</h2>
     </div>
+    <div id="footer">Footer</div>
 </body>
 
 </html>
